--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,6 @@
 }
 
 html {
-  scroll-behavior: smooth;
   font-size: 0.8rem;
 }
 
@@ -24,13 +23,18 @@ body {
   overflow-y: hidden;
 }
 
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 li {
   list-style: none;
 }
 
 a {
   text-decoration: none;
-  font-weight: 700;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   color: #F6F6F6;
@@ -56,6 +60,10 @@ h1, h2, h3, p {
   margin-bottom: 2rem;
 }
 
+p {
+  color: #5F5F5F;
+}
+
 .btn, .btn-ghost {
   padding: 1rem 2rem;
   display: inline-block;
@@ -64,13 +72,7 @@ h1, h2, h3, p {
 }
 
 .logo img {
-  width: 9rem;
-}
-
-@media (min-width: 1200px) {
-  .logo img {
-    width: 10rem;
-  }
+  width: 10rem;
 }
 
 .btn {
@@ -109,7 +111,7 @@ h1, h2, h3, p {
   top: 0;
   left: 0;
   background-color: #F6F6F6;
-  color: #1B1B1B;
+  color: #2e2e2e;
   height: 100vh;
   width: 100%;
   z-index: 800;
@@ -235,9 +237,7 @@ h1, h2, h3, p {
 
 .navbar {
   background-color: #F6F6F6;
-  -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -274,32 +274,32 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .navbar {
-    position: absolute;
     background-color: transparent;
-    -webkit-box-shadow: none;
-            box-shadow: none;
   }
 }
 
 .navbar__container {
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 600px) {
   .navbar__container {
-    padding: 1rem;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 1.5rem 1rem;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -310,7 +310,7 @@ h1, h2, h3, p {
   display: none;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 600px) {
   .navbar__nav-links {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -320,70 +320,59 @@ h1, h2, h3, p {
 
 .navbar__nav-link {
   margin-left: 1.5rem;
-  color: #1B1B1B;
+  color: #5F5F5F;
+  font-weight: 700;
 }
 
-.navbar__toggle {
-  padding: 0.5rem 1rem;
-  border: 1px solid #DBDBDB;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-.navbar__toggle .bar1,
-.navbar__toggle .bar2,
-.navbar__toggle .bar3 {
-  width: 25px;
-  height: 2px;
-  background-color: #1B1B1B;
-  margin: 7px 0;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-@media (min-width: 1200px) {
-  .navbar__toggle {
-    display: none;
-  }
-}
-
-.hamburger-menu {
+.bottom-navigation {
   position: fixed;
-  top: 74px;
+  bottom: 0;
   left: 0;
   right: 0;
-  max-height: 0;
-  overflow: hidden;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  background-color: #f1f1f1;
-  z-index: 100;
-  -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  background-color: #2e2e2e;
 }
 
-.hamburger-menu__navlinks {
-  padding: 0;
-  max-width: 600px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.hamburger-menu__navlink {
+.bottom-navigation ul {
   padding: 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.bottom-navigation ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
-  display: block;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  color: #1B1B1B;
 }
 
-.hamburger-menu__navlink:hover {
-  color: #DBA859;
+.bottom-navigation a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media (min-width: 1200px) {
-  .hamburger-menu {
+.bottom-navigation i {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+@media (min-width: 600px) {
+  .bottom-navigation {
     display: none;
   }
 }
@@ -394,6 +383,7 @@ h1, h2, h3, p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1200px) {
@@ -427,6 +417,7 @@ h1, h2, h3, p {
 }
 
 .showcase__text {
+  margin-top: -2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -475,6 +466,12 @@ h1, h2, h3, p {
   }
 }
 
+@media (min-width: 600px) {
+  .showcase__text {
+    margin-top: 0;
+  }
+}
+
 @media (min-width: 1200px) {
   .showcase__text {
     -webkit-box-align: start;
@@ -486,14 +483,14 @@ h1, h2, h3, p {
 }
 
 .showcase__text h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 900;
   line-height: 1;
 }
 
 @media (min-width: 1200px) {
   .showcase__text h1 {
-    font-size: 6rem;
+    font-size: 5rem;
   }
 }
 
@@ -504,11 +501,10 @@ h1, h2, h3, p {
   right: 0;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(246, 246, 246, 0.2)), to(rgba(246, 246, 246, 0.2))), url("../images/landing-image2.jpg");
   background-image: linear-gradient(rgba(246, 246, 246, 0.2), rgba(246, 246, 246, 0.2)), url("../images/landing-image2.jpg");
-  background-repeat: no-repeat;
-  background-position: left;
+  background-position: -50px 0;
   background-size: cover;
   height: 100%;
-  width: 70%;
+  width: 75%;
   z-index: -5;
   -webkit-animation: show-image 2s ease forwards;
           animation: show-image 2s ease forwards;
@@ -520,8 +516,8 @@ h1, h2, h3, p {
 @-webkit-keyframes show-image {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(50px);
-            transform: translateX(50px);
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
   }
   100% {
     opacity: 1;
@@ -533,8 +529,8 @@ h1, h2, h3, p {
 @keyframes show-image {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(50px);
-            transform: translateX(50px);
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
   }
   100% {
     opacity: 1;
@@ -588,12 +584,12 @@ h1, h2, h3, p {
 }
 
 .menu__item-image img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
 .menu__item-text {
@@ -610,7 +606,7 @@ h1, h2, h3, p {
   width: 80%;
 }
 
-.menu__item-left h3 {
+.menu__item-left h2 {
   margin-bottom: 0.5rem;
 }
 
@@ -751,8 +747,8 @@ h1, h2, h3, p {
 }
 
 .reservation {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 27, 27, 0.6)), to(rgba(27, 27, 27, 0.6))), url("../images/reservation-image.jpg");
-  background-image: linear-gradient(rgba(27, 27, 27, 0.6), rgba(27, 27, 27, 0.6)), url("../images/reservation-image.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 46, 46, 0.6)), to(rgba(46, 46, 46, 0.6))), url("../images/reservation-image.jpg");
+  background-image: linear-gradient(rgba(46, 46, 46, 0.6), rgba(46, 46, 46, 0.6)), url("../images/reservation-image.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -825,6 +821,10 @@ h1, h2, h3, p {
   text-align: center;
 }
 
+.contact__contact-info ul {
+  display: block;
+}
+
 @media (min-width: 1200px) {
   .contact__contact-info {
     text-align: left;
@@ -844,7 +844,7 @@ h1, h2, h3, p {
 }
 
 .contact__contact-info a {
-  color: #1B1B1B;
+  color: #2e2e2e;
   font-weight: 500;
 }
 
@@ -868,7 +868,7 @@ h1, h2, h3, p {
 }
 
 .footer {
-  background-color: #1B1B1B;
+  background-color: #2e2e2e;
   text-align: center;
 }
 
