--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,13 @@ body {
   letter-spacing: 1px;
   line-height: 1.6;
   overflow-y: hidden;
+  margin-bottom: 5rem;
+}
+
+@media (min-width: 600px) {
+  body {
+    margin-bottom: 0;
+  }
 }
 
 ul {
@@ -60,10 +67,6 @@ h1, h2, h3, p {
   margin-bottom: 2rem;
 }
 
-p {
-  color: #5F5F5F;
-}
-
 .btn, .btn-ghost {
   padding: 1rem 2rem;
   display: inline-block;
@@ -80,6 +83,7 @@ p {
   background-color: #DBA859;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  font-weight: 700;
 }
 
 .btn:hover {
@@ -101,9 +105,8 @@ p {
 }
 
 .heading {
-  margin-bottom: 4rem;
+  margin-bottom: 5rem;
   text-align: center;
-  font-weight: 900;
 }
 
 .loader {
@@ -320,7 +323,7 @@ p {
 
 .navbar__nav-link {
   margin-left: 1.5rem;
-  color: #5F5F5F;
+  color: #2e2e2e;
   font-weight: 700;
 }
 
@@ -330,7 +333,7 @@ p {
   left: 0;
   right: 0;
   z-index: 10;
-  background-color: #2e2e2e;
+  background-color: #363636;
 }
 
 .bottom-navigation ul {
@@ -364,6 +367,7 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-weight: 700;
 }
 
 .bottom-navigation i {
@@ -606,12 +610,12 @@ p {
   width: 80%;
 }
 
-.menu__item-left h2 {
+.menu__item-left h3 {
   margin-bottom: 0.5rem;
 }
 
 .divider {
-  background-color: #e9c998;
+  background-color: #f6ead7;
 }
 
 .divider__container {
