--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,6 +23,10 @@ body {
     letter-spacing: 1px;
     line-height: 1.6;
     overflow-y: hidden;
+    margin-bottom: 5rem;
+    @include sm {
+        margin-bottom: 0;
+    }
 }
 
 ul {
@@ -58,9 +62,7 @@ h1, h2, h3, p {
     margin-bottom: 2rem;
 }
 
-p {
-    color: $grey;
-}
+
 
 %btn {
     padding: 1rem 2rem;
@@ -80,6 +82,7 @@ p {
     color: $light;
     background-color: $primary;
     transition: $transition;
+    font-weight: 700;
     &:hover {
         background-color: transparent;
         color: $primary;
@@ -104,9 +107,9 @@ p {
 }
 
 .heading {
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
     text-align: center;
-    font-weight: 900;
+    
 }
 
 //loader
@@ -209,7 +212,7 @@ p {
     }
     &__nav-link {
         margin-left: 1.5rem;
-        color: $grey;
+        color: $dark;
         font-weight: 700;
     }
 }
@@ -221,7 +224,7 @@ p {
     left: 0;
     right: 0;
     z-index: 10;
-    background-color: $dark;
+    background-color: lighten($dark, 3);
     ul {
     padding: 1rem;
     justify-content: space-between;
@@ -236,7 +239,7 @@ p {
       display: flex;
       flex-direction: column;
       align-items: center;
-     
+        font-weight: 700;
     }
     i {
       margin-bottom: 0.5rem;
@@ -342,8 +345,6 @@ p {
             visibility: visible; 
         } 
     }
-
-    
 }
 
 //menu 
@@ -391,15 +392,16 @@ p {
     }
     &__item-left {
         width: 80%;
-        h2 {
+        h3 {
             margin-bottom: 0.5rem;
         }
+       
        
     }
 }
 
 .divider {
-    background-color: lighten($primary, 15);
+    background-color: lighten($primary, 30);
     &__container {
         @include container(5rem 1rem, 600px);
         @include xl {
