--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ html {
 
 body {
   background-color: #F6F6F6;
+  color: #292929;
   letter-spacing: 1px;
   line-height: 1.6;
   overflow-y: hidden;
@@ -64,7 +65,7 @@ h3 {
 }
 
 h1, h2, h3, p {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .btn, .btn-ghost {
@@ -114,7 +115,7 @@ h1, h2, h3, p {
   top: 0;
   left: 0;
   background-color: #F6F6F6;
-  color: #2e2e2e;
+  color: #292929;
   height: 100vh;
   width: 100%;
   z-index: 800;
@@ -323,7 +324,7 @@ h1, h2, h3, p {
 
 .navbar__nav-link {
   margin-left: 1.5rem;
-  color: #2e2e2e;
+  color: #292929;
   font-weight: 700;
 }
 
@@ -333,7 +334,7 @@ h1, h2, h3, p {
   left: 0;
   right: 0;
   z-index: 10;
-  background-color: #363636;
+  background-color: #313131;
 }
 
 .bottom-navigation ul {
@@ -615,7 +616,7 @@ h1, h2, h3, p {
 }
 
 .divider {
-  background-color: #f6ead7;
+  background-color: #edd4ad;
 }
 
 .divider__container {
@@ -751,8 +752,8 @@ h1, h2, h3, p {
 }
 
 .reservation {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(46, 46, 46, 0.6)), to(rgba(46, 46, 46, 0.6))), url("../images/reservation-image.jpg");
-  background-image: linear-gradient(rgba(46, 46, 46, 0.6), rgba(46, 46, 46, 0.6)), url("../images/reservation-image.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(41, 41, 41, 0.6)), to(rgba(41, 41, 41, 0.6))), url("../images/reservation-image.jpg");
+  background-image: linear-gradient(rgba(41, 41, 41, 0.6), rgba(41, 41, 41, 0.6)), url("../images/reservation-image.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -848,7 +849,7 @@ h1, h2, h3, p {
 }
 
 .contact__contact-info a {
-  color: #2e2e2e;
+  color: #292929;
   font-weight: 500;
 }
 
@@ -872,7 +873,7 @@ h1, h2, h3, p {
 }
 
 .footer {
-  background-color: #2e2e2e;
+  background-color: #292929;
   text-align: center;
 }
 
