--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  scroll-behavior: smooth;
   font-size: 0.8rem;
 }
 
@@ -101,7 +102,6 @@ h1, h2, h3, p {
   margin-bottom: 0;
   color: #DBA859;
   font-family: 'Tangerine', cursive;
-  font-size: 2rem;
   text-align: center;
 }
 
@@ -586,6 +586,7 @@ h1, h2, h3, p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: 1px solid gainsboro;
 }
 
 .menu__item-image img {
