--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
 $light: #F6F6F6;
-$dark: #292929;
+$dark: #202020;
 $grey: #5F5F5F;
 $light-grey: #858585;
-$primary: #DBA859;
+$primary: #E5AE6A;
 $transition: all 0.3s ease;
