--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Cinzel', serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
@@ -19,7 +19,7 @@ html {
 
 body {
   background-color: #F6F6F6;
-  color: #292929;
+  color: #202020;
   letter-spacing: 1px;
   line-height: 1.6;
   overflow-y: hidden;
@@ -44,13 +44,14 @@ li {
 
 a {
   text-decoration: none;
+  font-weight: 500;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   color: #F6F6F6;
 }
 
 a:hover {
-  color: #DBA859;
+  color: #E5AE6A;
 }
 
 h1 {
@@ -65,15 +66,25 @@ h3 {
   font-size: 1.17rem;
 }
 
+h1, h2 {
+  font-family: 'Cinzel', serif;
+}
+
 h1, h2, h3, p {
   margin-bottom: 1.5rem;
+}
+
+small {
+  font-weight: 300;
 }
 
 .btn, .btn-ghost {
   padding: 1rem 2rem;
   display: inline-block;
   text-align: center;
-  border: 1px solid #DBA859;
+  border: 1px solid #E5AE6A;
+  border-radius: 30px;
+  font-weight: 400;
 }
 
 .logo img {
@@ -82,26 +93,24 @@ h1, h2, h3, p {
 
 .btn {
   color: #F6F6F6;
-  background-color: #DBA859;
+  background-color: #E5AE6A;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  font-weight: 700;
 }
 
 .btn:hover {
   background-color: transparent;
-  color: #DBA859;
+  color: #E5AE6A;
 }
 
 .btn-ghost {
-  color: #DBA859;
+  color: #E5AE6A;
   background-color: transparent;
 }
 
 .above-heading {
   margin-bottom: 0;
-  color: #DBA859;
-  font-family: 'Tangerine', cursive;
+  color: #E5AE6A;
   text-align: center;
 }
 
@@ -115,7 +124,7 @@ h1, h2, h3, p {
   top: 0;
   left: 0;
   background-color: #F6F6F6;
-  color: #292929;
+  color: #202020;
   height: 100vh;
   width: 100%;
   z-index: 800;
@@ -154,7 +163,7 @@ h1, h2, h3, p {
   width: 100%;
   height: 100%;
   border: 8px solid transparent;
-  border-top-color: #e4be83;
+  border-top-color: #edc695;
   border-radius: 50%;
   -webkit-animation: spinnerOne 1.2s linear infinite;
           animation: spinnerOne 1.2s linear infinite;
@@ -162,7 +171,7 @@ h1, h2, h3, p {
 
 .loader .spinner div:nth-child(2) {
   border: 8px solid transparent;
-  border-bottom-color: #e4be83;
+  border-bottom-color: #edc695;
   -webkit-animation: spinnerTwo 1.2s linear infinite;
           animation: spinnerTwo 1.2s linear infinite;
 }
@@ -324,8 +333,7 @@ h1, h2, h3, p {
 
 .navbar__nav-link {
   margin-left: 1.5rem;
-  color: #292929;
-  font-weight: 700;
+  color: #202020;
 }
 
 .bottom-navigation {
@@ -334,7 +342,7 @@ h1, h2, h3, p {
   left: 0;
   right: 0;
   z-index: 10;
-  background-color: #313131;
+  background-color: #282828;
 }
 
 .bottom-navigation ul {
@@ -368,7 +376,6 @@ h1, h2, h3, p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 700;
 }
 
 .bottom-navigation i {
@@ -489,14 +496,18 @@ h1, h2, h3, p {
 
 .showcase__text h1 {
   font-size: 3rem;
-  font-weight: 900;
+  font-weight: 700;
   line-height: 1;
 }
 
 @media (min-width: 1200px) {
   .showcase__text h1 {
-    font-size: 5rem;
+    font-size: 3rem;
   }
+}
+
+.showcase__text p {
+  font-weight: 500;
 }
 
 .showcase__image {
@@ -586,6 +597,7 @@ h1, h2, h3, p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-bottom: 1.5rem;
   border-bottom: 1px solid gainsboro;
 }
 
@@ -608,16 +620,17 @@ h1, h2, h3, p {
   width: 100%;
 }
 
+.menu__item-text p {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+
 .menu__item-left {
   width: 80%;
 }
 
-.menu__item-left h3 {
-  margin-bottom: 0.5rem;
-}
-
 .divider {
-  background-color: #edd4ad;
+  background-color: #FFE9CE;
 }
 
 .divider__container {
@@ -642,7 +655,7 @@ h1, h2, h3, p {
   display: grid;
   -ms-grid-columns: (1fr)[1];
       grid-template-columns: repeat(1, 1fr);
-  gap: 2rem;
+  gap: 3rem;
 }
 
 @media (min-width: 1200px) {
@@ -691,14 +704,6 @@ h1, h2, h3, p {
           flex: 1;
 }
 
-@media (min-width: 1200px) {
-  .about__image {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-  }
-}
-
 .about__image img {
   width: 100%;
 }
@@ -716,14 +721,6 @@ h1, h2, h3, p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-@media (min-width: 1200px) {
-  .about__text {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-  }
 }
 
 @media (min-width: 1200px) {
@@ -753,8 +750,8 @@ h1, h2, h3, p {
 }
 
 .reservation {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(41, 41, 41, 0.6)), to(rgba(41, 41, 41, 0.6))), url("../images/reservation-image.jpg");
-  background-image: linear-gradient(rgba(41, 41, 41, 0.6), rgba(41, 41, 41, 0.6)), url("../images/reservation-image.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(32, 32, 32, 0.6)), to(rgba(32, 32, 32, 0.6))), url("../images/reservation-image.jpg");
+  background-image: linear-gradient(rgba(32, 32, 32, 0.6), rgba(32, 32, 32, 0.6)), url("../images/reservation-image.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -777,7 +774,7 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .reservation__container {
-    padding: 10rem 1rem;
+    padding: 7.5rem 1rem;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -845,13 +842,13 @@ h1, h2, h3, p {
   margin-bottom: 0.5rem;
 }
 
-.contact__contact-info h3 {
+.contact__contact-info h4 {
   margin-bottom: 0.5rem;
 }
 
 .contact__contact-info a {
-  color: #292929;
-  font-weight: 500;
+  color: #202020;
+  font-weight: 400;
 }
 
 .contact__map {
@@ -874,7 +871,7 @@ h1, h2, h3, p {
 }
 
 .footer {
-  background-color: #292929;
+  background-color: #202020;
   text-align: center;
 }
 
