--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,7 @@
 html {
     scroll-behavior: smooth;
     font-size: 0.8rem;
-    @include xl {
+    @include sm {
         font-size: 1rem;
     }
 }
@@ -32,6 +32,7 @@ body {
 
 ul {
     display: flex;
+    justify-content: center;
 }
 
 li {
@@ -40,7 +41,6 @@ li {
 
 a {
     text-decoration: none;
-    font-weight: 500;
     transition: $transition;
     color: $light;
         &:hover {
@@ -85,7 +85,7 @@ small {
 
 .logo {
     img {
-            width: 10rem;
+            max-width: 9rem;
     }
 }
 
@@ -224,6 +224,7 @@ small {
     &__nav-link {
         margin-left: 1.5rem;
         color: $dark;
+        font-weight: 500;
     }
 }
 
@@ -318,15 +319,16 @@ small {
         }
 
        h1 {
-           font-size: 3rem;
+           font-size: 2.5rem; 
            font-weight: 700;
-           line-height: 1;
-           @include xl {
-            font-size: 3rem; 
+           line-height: 1.3;
+           @include sm {
+               font-size: 3.5rem;
            }
+         
        }
        p {
-           font-weight: 500;
+        font-weight: 500;
        }
     }
 
@@ -587,12 +589,17 @@ small {
         margin: 0 1rem;
     }
     &__container {
-        @include container(3rem 1rem, 1200px);
+        @include container(3rem 1rem 1.5rem, 1200px);
         border-bottom: 1px solid #494949;
     }
   
     &__bottom {
         padding: 2rem;
         color: $light;
+    }
+
+    &__quick-link {
+        margin: 0.5rem;
+       
     }
 }
